# streamlit-table-labeling

./: README.md  pyproject.toml
src/streamlit_table_labeling/: app.py
src/streamlit_table_labeling/db/: database.py  schemas.py
src/streamlit_table_labeling/utils/: config.py  streamlit_actions.py
