[project]
name = "streamlit-table-labeling"
version = "0.1.0"
description = "Streamlit app for table labeling"
authors = [{ name = "Leo Mainard", email = "leomainard63@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "streamlit",
    "sqlmodel",
    "sqlalchemy",
    "psycopg2"
]

[project.optional-dependencies]
dev = ["pytest", "black"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
